--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "build-demo": "npx lego"
   },
   "dependencies": {
-    "@polight/lego": "*",
-    "petit-dom": "^0.6.0"
+    "@polight/lego": "^2.0.0-beta.3"
   }
 }
