feat: demo with lego@1.10.1

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "build-demo": "npx lego"
   },
   "dependencies": {
-    "@polight/lego": "^2.0.0-beta.8"
+    "@polight/lego": "^1.10.1"
   }
 }
